Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1238

Line select from gutter doesn't work in unknown file-types

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 1.3.83 (2.0.0-beta), Qt Creator 1.3.85 (2.0.0-rc1)
    • Editors
    • None
    • 2641496a997ca3ab22cf29bd6ac0ef36f12a046e

    Description

      Line selection by clicking in the gutter (over line numbers) doesn't work in non-syntax-highlighted files, which seems funny.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            bryceman Bryce Schober
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes