Fixed line select in gutter when text marks are not visible

The ProjectFilesEditor used for editing the generic project's files does
not show text marks, which broke the line select in the gutter.

Task-number: QTCREATORBUG-1238
Reviewed-by: mae