src/plugins/texteditor/basetexteditor.cpp
@@ -3557,7 +3557,7 @@ void BaseTextEditor::extraAreaMouseEvent(QMouseEvent *e)
                     toggleBlockVisible(c);
                     d->moveCursorVisible(false);
                 }
-            } else if (d->m_marksVisible && e->pos().x() > markWidth) {
+            } else if (e->pos().x() > markWidth) {
                 QTextCursor selection = cursor;
                 selection.setVisualNavigation(true);
                 d->extraAreaSelectionAnchorBlockNumber = selection.blockNumber();
